# g2ui

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260519_0001_create_projects_and_canvases.py  20260608_0002_drop_projects.py
apps/api/src/g2ui_api/: main.py  settings.py
apps/api/src/g2ui_api/routers/: __init__.py
apps/api/src/g2ui_api/schemas/: __init__.py  canvas.py
apps/api/src/guimintlab_api/: auth.py  db.py  deps.py  main.py  settings.py
apps/api/src/guimintlab_api/models/: __init__.py  canvas.py  project.py
apps/api/src/guimintlab_api/routers/: __init__.py  canvases.py  me.py  projects.py
apps/api/src/guimintlab_api/schemas/: __init__.py  project.py
apps/api/tests/: conftest.py  test_health.py
apps/web/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
coverage/: index.html  lcov.info
coverage/app/: App.tsx.html  index.html
coverage/lcov-report/: index.html
src/: main.tsx
src/app/: App.tsx
src/components/: CustomSelect.tsx  DraftNumberInput.tsx  IconButton.tsx
src/layout/: color.ts  layoutEngine.ts
src/samples/: hello.ts
src/store/: editorStore.ts
src/styles/: global.css
src/ui-ir/: defaults.ts  types.ts
tests/: setup.ts
tests/fixtures/: projects.ts  store.ts
(+408 files in other folders)
